--- a/index.html
+++ b/index.html
@@ -1,11 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lesson5</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <h1>Table</h1>
+    <table id="table1">
+        <tr class="grad">
+            <th>NAME1</th>
+            <th>IS HUMAN</th>
+            <th>SUPERPOWER</th>
+            <th>INTELLIGENCE</th>
+            <th>STRENGTH</th>
+            <th>SPEED</th>
+        </tr>
+        <tr>
+            <td class="batman odd">Batman</td>
+            <td class="batman" rowspan="7"> TRUE</td>
+            <td class="batman">Lorem, ipsum dolor.</td>
+            <td class="batman max">100</td>
+            <td class="batman">30</td>
+            <td class="batman">25</td>
+        </tr>
+        <tr>
+            <td class="captain even">Captain America</td>
+            <td class="captain">Lorem ipsum dolor sit.</td>
+            <td class="captain">90</td>
+            <td class="captain">55</td>
+            <td class="captain">45</td>
+        </tr>
+        <tr>
+            <td class="daredev odd">Daredevil</td>
+            <td class="daredev">Lorem, ipsum.</td>
+            <td class="daredev">90</td>
+            <td class="daredev">15</td>
+            <td class="daredev">35</td>
+        </tr>
+        <tr>
+            <td class="greenlant even">Green Lantern</td>
+            <td class="greenlant">Brights green energy field.</td>
+            <td class="greenlant">80</td>
+            <td class="greenlant max">100</td>
+            <td class="greenlant max">100</td>
+        </tr>
+        <tr>
+            <td class="hulk odd">Hulk</td>
+            <td class="hulk">Superhuman strength</td>
+            <td class="hulk">60</td>
+            <td class="hulk max">100</td>
+            <td class="hulk max">100</td>
+        </tr>
+        <tr>
+            <td class="ironman even">Iron Man</td>
+            <td class="ironman">Lorem, ipsum dolor.</td>
+            <td class="ironman max">100</td>
+            <td class="ironman">85</td>
+            <td class="ironman">60</td>
+        </tr>
+        <tr>
+            <td class="spider odd">Spider Man</td>
+            <td class="spider">Lorem ipsum dolor sit amet.</td>
+            <td class="spider">95</td>
+            <td class="spider">55</td>
+            <td class="spider">65</td>
+        </tr>
+        <tr>
+            <td class="superman even">Superman</td>
+            <td class="superman" style="background-color: #7a0b0b; color: white;">FALSE</td>
+            <td class="superman">Lorem, ipsum.</td>
+            <td class="superman">95</td>
+            <td class="superman max">100</td>
+            <td class="superman">100</td>
+        </tr>
+        <tr>
+            <td class="flash odd">The Flash</td>
+            <td class="flash">TRUE</td>
+            <td class="flash">Speed force conduit</td>
+            <td class="flash">95</td>
+            <td class="flash">50</td>
+            <td class="flash max">100</td>
+        </tr>
+        <tr>
+            <td class="thor even">Thor</td>
+            <td class="thor" rowspan="3" style="background-color: #7a0b0b; color: white;">FALSE</td>
+            <td class="thor">Lorem ipsum dolor sit amet.</td>
+            <td class="thor">80</td>
+            <td class="thor max">100</td>
+            <td class="thor max">100</td>
+        </tr>
+        <tr>
+            <td class="wolver odd">Wolverine</td>
+            <td class="wolver">Lorem, ipsum.</td>
+            <td class="wolver">90</td>
+            <td class="wolver">80</td>
+            <td class="wolver">40</td>
+        </tr>
+        <tr>
+            <td class="wonderwom even">Wonder Woman</td>
+            <td class="wonderwom">Lorem, ipsum dolor.</td>
+            <td class="wonderwom">90</td>
+            <td class="wonderwom max">100</td>
+            <td class="wonderwom max">100</td>
+        </tr>
+        <table>
 </body>
+
 </html>
